fix: address all best practices review v4 findings (2026-02-17)
All 15 findings addressed:

#1/#8: Replace all isSuccess() calls with record accessor success()
    across 11 production files and 20 test files. Remove the
    deprecated isSuccess() method from ReviewResult.

#2: Replace Logger constructor injection with static Logger in
    AgentReviewExecutor, ReviewResultPipeline, LocalSourcePrecomputer,
    and ReviewSessionConfigFactory. SLF4J best practice compliance.

#3: Replace instanceof with exhaustive switch in
    LocalSourcePrecomputer.resolveLocalDirectory().

#4/#10: Add import for java.util.stream.Collectors in GithubMcpConfig,
    replacing inline FQN reference.

#5/#9: Remove isSuccess() from SkillResult and migrate the one
    production caller to success(). Delete the method entirely.

#6: Add Builder.from() + Builder pattern to ExecutionConfig for
    the withParallelism() copy method.

#7: Add compact constructor to CustomInstruction record with null
    safety for sourcePath, content, and source.

#11: Enhance README.md with project name, description, Quick Start
    section, and documentation links.

#12: Add @Nullable to OrchestratorConfig fields: githubToken,
    githubMcpConfig, reasoningEffort, outputConstraints.

#13: Remove 2 telescoping constructors from AgentConfigLoader,
    keeping only Path (convenience) and full-params constructors.

#14: Add PromptTemplates record to ReviewAgent, grouping
    focusAreasGuidance/localSourceHeader/localReviewResultPrompt.
    Reduce public constructors from 2 to 2 (default + PromptTemplates).

#15: Add @Nullable to OrchestratorCollaborators.executorService
    (null in Structured Concurrency mode).